--- a/busca_minas_Rus_Yeray.html
+++ b/busca_minas_Rus_Yeray.html
@@ -7,15 +7,17 @@
     <script src="js/buscaminas.js"></script>
     <title>BuscaMinas</title>
     <style>
-        table{
+        td,table{
             border-collapse: collapse;
-            margin-left: 50%;
-            margin-top: 10%;
+            margin: auto;
+            margin-top: 5%;
         }
         td{
             border: 1px black solid;
             padding: 10px;
             text-align: center;
+            height: 50px;
+            width: 50px;
         }
     </style>
 </head>
