--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Buscaminas</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <script src="js/buscaminas.obj.js"></script>
 </head>
 <body>
-    <h1>Practica 2.7</h1>
-    <p>Aprendiendo GitT</p>
+    
 </body>
 </html>
