El codigo devuelve parejas de imagenes y no numero

--- a/JuegoMemoria_RusYeray/html/index.html
+++ b/JuegoMemoria_RusYeray/html/index.html
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juego de Memoria</title>
     <link rel="stylesheet" href="css/estilos.css">
-    <script src="/JuegoMemoria_RusYeray/js/juegoMemoria.js"></script>
+    <script src="/JuegoMemoria_RusYeray/js/juegoMemoria.obj.js"></script>
 </head>
 <body>
-    <h1>Juego de memoria</h1>
-    <h2>Yeray Rus Martinez</h2>
 
-    
-    
-</body>
+
+    </body>
 </html>
