--- a/Busca_minas/index.html
+++ b/Busca_minas/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego de Memoria</title>
+    <title>Buscaminas</title>
     <link rel="stylesheet" href="css/estilos.css">
-    <script src="/JuegoMemoria_RusYeray/js/juegoMemoria.obj.js"></script>
+    <script src="js/buscaminas.obj.js"></script>
 </head>
 <body>
-
-
-    </body>
+    
+</body>
 </html>
