Haciendo el boton de reiniciar

--- a/JuegoMemoria_RusYeray_V2/Aplicacion/index.html
+++ b/JuegoMemoria_RusYeray_V2/Aplicacion/index.html
@@ -9,7 +9,17 @@
     <script src="js/juegoMemoria.obj.js"></script>
 </head>
 <body>
-
-
-    </body>
+    <script>
+        function mensaje(){
+            var mensaje;
+    var opcion = confirm("Clicka en Aceptar o Cancelar");
+    if (opcion == true) {
+        mensaje = "Has clickado OK";
+	} else {
+	    mensaje = "Has clickado Cancelar";
+	}
+	document.getElementById("ejemplo").innerHTML = mensaje;
+        }
+    </script>
+</body>
 </html>
